# adventofcode

./: .gitignore  README.md  adventofcode.code-workspace  incomp.code-workspace
2019/day1/: Cargo.toml
2019/day11/: Cargo.toml
2019/day12/: input.txt
2019/day13/: Cargo.toml  ai.txt
2019/day14/: Cargo.toml
2019/day15/: Cargo.toml
2019/day16/: Cargo.toml
2019/day17/: Cargo.toml
2019/day2/: Cargo.toml
2019/day3/: Cargo.toml
2019/day4/: Cargo.toml
2019/day5/: Cargo.toml
2019/day8/: Cargo.toml
2019/day9/: Cargo.toml
2019/utils/: Cargo.toml
2022/: main.cpp
2022/adventofcode_2022/: adventofcode_2022.sln  adventofcode_2022.vcxproj  adventofcode_2022.vcxproj.filters
csharp/: AdventOfCode.sln
csharp/AdventOfCode.Common/: AdventOfCode.Common.csproj  BaseDay.cs  DayHelper.cs  DayInput.cs  DefaultDirectory.cs  GridHelper.cs  IConsole.cs  IDay.cs  MenuSelection.cs  Point.cs  TextConsole.cs
csharp/AdventOfCode.ServiceHost/: AdventOfCode.ServiceHost.csproj  AdventOfCodeService.cs  Program.cs
csharp/AdventOfCode.Year2018/: AdventOfCode.Year2018.csproj  Day01.cs  Day02.cs
csharp/AdventOfCode.Year2018.Tests/: AdventOfCode.Year2018.Tests.csproj  Day01Test.cs
csharp/AdventOfCode.Year2020/: AdventOfCode.Year2020.csproj  Day01.cs  (+24 more)
csharp/AdventOfCode.Year2020.Tests/: AdventOfCode.Year2020.Tests.csproj  UnitTest1.cs
day10/: Cargo.toml
day12/: Cargo.toml
day12/src/: main.rs  moon.rs
day13/: ai.txt
day2/: Cargo.toml
day5/: .gitignore.swp  Cargo.toml
day6/: Cargo.toml
day7/: Cargo.toml
intcode/: Cargo.toml
intcomp/: Cargo.toml
(+189 files in other folders)
