[package]
name = "day12"
version = "0.1.0"
authors = ["Emil Ekberg <ekberg.emil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
regex = "1"
num = "0.2"

[profile.release]
opt-level = 3